--- a/header.html
+++ b/header.html
@@ -6,7 +6,7 @@
           <a href="works.html">Works</a>
         </li>
         <li class="nav-item">
-          <a href="/blog.html">Blog</a>
+          <a href="blog.html">Blog</a>
         </li>
         <li class="nav-item">
           <a href="contact.html">Contact</a>
