--- a/header.html
+++ b/header.html
@@ -1,15 +1,15 @@
 <header>
     <nav id="navbar">
-          <a href="/docs/index.html" class="nav-brand">Gabrielle Alves</a>
+          <a href="index.html" class="nav-brand">Gabrielle Alves</a>
       <ul class="nav-list">
         <li class="nav-item">
-          <a href="/docs/works.html">Works</a>
+          <a href="works.html">Works</a>
         </li>
         <li class="nav-item">
-          <a href="/docs/blog.html">Blog</a>
+          <a href="blog.html">Blog</a>
         </li>
         <li class="nav-item">
-          <a href="/docs/contact.html">Contact</a>
+          <a href="contact.html">Contact</a>
         </li>
       </ul>
       <div class="hamburguer-menu">
